--- a/apps/apps-web/medium.com/android-architecture-components-lifecycle/app/src/main/AndroidManifest.xml
+++ b/apps/apps-web/medium.com/android-architecture-components-lifecycle/app/src/main/AndroidManifest.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.readendless.permissionstraining">
-
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.CAMERA" />
+    package="com.readendless.lifecycleexample">
 
     <application
         android:allowBackup="true"
@@ -12,18 +9,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CustomView"></activity>
-        <activity
-            android:name=".ExampleActivity"
-            android:icon="@drawable/app_icon">
-            <intent-filter>
-                <action android:name="android.intent.action.SEND" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-
-                <data android:mimeType="text/plain" />
-            </intent-filter>
-        </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
