--- a/apps/apps-docs/developer.android.com/fragments-pass-data-between/intro1/app/build.gradle
+++ b/apps/apps-docs/developer.android.com/fragments-pass-data-between/intro1/app/build.gradle
@@ -6,8 +6,17 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.0"
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
+
     defaultConfig {
-        applicationId "com.readendless.learning.createafragmentclass"
+        applicationId "com.readendless.learning.passdatabetweenfragments"
         minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
@@ -25,10 +34,11 @@ android {
 }
 
 dependencies {
-    def fragment_version = "1.2.5"
-
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.fragment:fragment:1.3.0-alpha06'
+    implementation 'androidx.fragment:fragment-ktx:1.3.0-alpha06'
+    debugImplementation 'androidx.fragment:fragment-testing:1.3.0-alpha06'
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -36,5 +46,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
+
 }
