--- a/apps/apps-docs/developer.android.com/training-basics-intents/intro1/app/build.gradle
+++ b/apps/apps-docs/developer.android.com/training-basics-intents/intro1/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.0"
 
     defaultConfig {
-        applicationId "com.readendless.learning.createafragmentclass"
+        applicationId "com.readendless.learning.lifecycleobserverexample"
         minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
@@ -25,16 +25,20 @@ android {
 }
 
 dependencies {
-    def fragment_version = "1.2.5"
+    def lifecycle_version = "2.2.0"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
+    implementation "androidx.activity:activity:1.2.0-alpha06"
+    implementation "androidx.activity:activity-ktx:1.2.0-alpha06"
+
+    // alternately - if using Java8, use the following instead of lifecycle-compiler
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+
 }
