--- a/apps/apps-web/thetechnocafe.com/understanding-lifecycle-in-android-architecture-components/intro1/app/build.gradle
+++ b/apps/apps-web/thetechnocafe.com/understanding-lifecycle-in-android-architecture-components/intro1/app/build.gradle
@@ -7,8 +7,8 @@ android {
     buildToolsVersion "30.0.0"
 
     defaultConfig {
-        applicationId "com.readendless.learning.lifecycleobserverexample"
-        minSdkVersion 23
+        applicationId "com.readendless.learning.understandinglifecycleinandroid"
+        minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -25,8 +25,6 @@ android {
 }
 
 dependencies {
-    def lifecycle_version = "2.2.0"
-
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.0'
@@ -35,10 +33,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation "androidx.activity:activity:1.2.0-alpha06"
-    implementation "androidx.activity:activity-ktx:1.2.0-alpha06"
-    // Lifecycles only (without ViewModel or LiveData)
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
-
+    implementation "android.arch.lifecycle:extensions:1.1.1"
 
 }
